# backend

./: .buckconfig  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  vendir.lock.yml  vendir.yml
.github/workflows/: check-sdls.yml  e2e.yml  test.yml
core/api/: .env  BUCK  Cargo.toml  Dockerfile  api.yml  build.rs
core/api/.sqlx/: query-54006b49b65eb61b78d5c1692b430a4b1419d0836f1ed0493e1168c297237fb1.json  query-ec0d47b5acd149a704dd5dce369a3f60eabdfb5d0f999ca3c253f050cf0b53aa.json
core/api/migrations/: 20240108055700_group.sql
core/api/src/: error.rs  lib.rs  main.rs  primitives.rs
core/api/src/app/: config.rs  mod.rs
core/api/src/cli/: config.rs  mod.rs
core/api/src/group/: entity.rs  mod.rs  repo.rs
core/api/src/server/: auth_middleware.rs  config.rs  middleware.rs  mod.rs
core/api/src/server/graphql/: mod.rs  schema.rs
core/api/subgraph/: schema.graphql
dev/: BUCK  Tiltfile  docker-compose.deps.yml  healthcheck.py  otel-agent.yml
dev/apollo/: router.yaml  supergraph-config.yaml  supergraph.graphql
dev/ory/: id-token.jwks.json  id-v0.schema.json  kratos.yml  oathkeeper.yml  oathkeeper_rules.yml
e2e/: setup_suite.bash
e2e/core/: auth.bats  foreign_user.bats  group.bats
e2e/gql/: create_group.gql  globals.gql  whoami.gql
e2e/helpers/: _common.bash  auth.bash  kratos.bash
lib/common/: BUCK  Cargo.toml
lib/common/src/: lib.rs  money.rs  pid.rs  primitives.rs
lib/tracing-rs/src/: lib.rs
toolchains/: BUCK
vendir/: template.yml  values.yml
