[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_api"

[dependencies]
tracing = { path = "../../lib/tracing-rs" }
common = { path = "../../lib/common" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
sha256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
